No reason to put a container into a container everywhere

--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -15,6 +15,7 @@
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{lang_settings}}<b class="caret"></b></a>
 					<ul class="dropdown-menu">
 						<li class="dropdown-header">{{lang_client}}</li>
+						<li><a href="?do=News">{{lang_news}}</a></li>
 						<li><a href="?do=SysConfig">{{lang_localization}}</a></li>
 						<li><a href="?do=MiniLinux">bwLehrpool Mini-Linux</a></li>
 						<li><a href="?do=BaseConfig">{{lang_configurationVariables}}</a></li>
@@ -23,9 +24,9 @@
 						<li class="dropdown-header">{{lang_server}}</li>
 						<li><a href="?do=ServerSetup">{{lang_configurationBasic}}</a></li>
 						<li><a href="?do=VmStore">{{lang_vmLocation}}</a></li>
+						<li><a href="?do=Backup">{{lang_backup}}</a></li>
 					</ul>
 				</li>
-				<li><a href="?do=News">{{lang_news}}</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{lang_status}}<b class="caret"></b></a>
 					<ul class="dropdown-menu">
