--- a/templates/sysconfig/cfg-start.html
+++ b/templates/sysconfig/cfg-start.html
@@ -1,7 +1,7 @@
 <form role="form" method="post" action="?do=SysConfig&amp;action=addconfig&amp;step={{step}}">
 	<input type="hidden" name="token" value="{{token}}">
 	<div class="input-group">
-		<span class="input-group-addon">{{lang_name}}</span>
+		<span class="input-group-addon">{{lang_name}} *</span>
 		<input type="text" name="title" class="form-control" placeholder="{{lang_configuration}}" autofocus="autofocus">
 	</div>
 		<hr>
