--- a/templates/page-minilinux.html
+++ b/templates/page-minilinux.html
@@ -1,4 +1,4 @@
-<div class="container" id="systemlist">
+<div id="systemlist">
 	<div class="panel panel-default">{{lang_listObtained}}</div>
 	<script type="text/javascript">
 		var slx_check = setInterval(function() {
