--- a/style/default.css
+++ b/style/default.css
@@ -148,5 +148,22 @@ body {
 }
 
 .slx-warning-badge {
-  color: #ff0;
+  color: #ff6;
+}
+
+.slx-footer {
+  color: #999;
+  padding: 5px;
+}
+
+.slx-bold {
+  font-weight: bold;
+}
+
+.slx-fade {
+  opacity: 0.5;
+}
+
+.slx-pointer {
+  cursor: pointer;
 }
