--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -23,6 +23,7 @@
 						<li class="divider"></li>
 						<li class="dropdown-header">{{lang_server}}</li>
 						<li><a href="?do=ServerSetup">{{lang_configurationBasic}}</a></li>
+						<li><a href="?do=InternetAccess">{{lang_internetAccess}}</a></li>
 						<li><a href="?do=VmStore">{{lang_vmLocation}}</a></li>
 						<li><a href="?do=Backup">{{lang_backup}}</a></li>
 					</ul>
