Several minor fixes
- Removed common share setting for now (until properly supported)
- Remove extra container div in message display
- Support multiline translation strings
- Add "next" button on top of file list when creating custom config module

--- a/templates/sysconfig/custom-fileselect.html
+++ b/templates/sysconfig/custom-fileselect.html
@@ -5,7 +5,11 @@
 		<span class="input-group-addon">{{lang_moduleName}}</span>
 		<input type="text" name="title" class="form-control" placeholder="Mein Konfigurationsmodul" autofocus="autofocus">
 	</div>
-		<hr>
+	<div class="pull-right">
+		<button type="submit" class="btn btn-primary">{{lang_next}} &raquo;</button>
+	</div>
+	<div class="clearfix"></div>
+	<hr>
 	<p>{{lang_checkFileContent}}</p>
 	<table class="table table-bordered table-condensed">
 	{{#files}}
