Update config example, style, translations

--- a/style/default.css
+++ b/style/default.css
@@ -87,15 +87,15 @@ body {
 }
 
 .red {
-	color: #c00;
+	color: #b00;
 }
 
 .orange {
-	color: #c70;
+	color: #b70;
 }
 
 .green {
-	color: #0c0;
+	color: #0b0;
 }
 
 .slx-label {
