Add HTTPS config module for webif, update everything to use FileUtil class, minor fixes

--- a/templates/backup/restore.html
+++ b/templates/backup/restore.html
@@ -9,7 +9,7 @@
 			<div data-tm-id="{{restoreid}}" data-tm-log="messages" data-tm-callback="restoreCb">{{lang_restoreConfig}}</div>
 			<div data-tm-id="{{rebootid}}" data-tm-log="messages">{{lang_reboot}}</div>
 		</div>
-		<div id="restorefailed" style="display:none">
+		<div id="restorefailed" class="alert alert-danger" style="display:none">
 			{{lang_restoreFailed}}
 		</div>
 	</div>
