Lots of small bugfixes, proxy config WIP, https config WIP, translation updates, added masterpassword to pxe menu, ...

--- a/templates/page-news.html
+++ b/templates/page-news.html
@@ -1,9 +1,9 @@
-<p>{{lang_newsIntro}}</p>
 <div class="panel panel-default">
 	<div class="panel-heading">
-		{{lang_activeNews}}
+		{{lang_editNews}}
 	</div>
 	<div class="panel-body">
+		<p>{{lang_newsIntro}}</p>
 		<form action="?do=News&amp;action=save" method="post">
 			<div class="form-group">
 				<label for="news-title-id">{{lang_title}}</label>
