--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -19,7 +19,6 @@
 						<li><a href="?do=SysConfig">{{lang_localization}}</a></li>
 						<li><a href="?do=MiniLinux">bwLehrpool Mini-Linux</a></li>
 						<li><a href="?do=BaseConfig">{{lang_configurationVariables}}</a></li>
-						<li><a href="?do=Translation">{{lang_administration}}</a></li>
 						<li class="divider"></li>
 						<li class="dropdown-header">{{lang_server}}</li>
 						<li><a href="?do=ServerSetup">{{lang_configurationBasic}}</a></li>
@@ -39,6 +38,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="lang/{{current_lang}}/flag.png"><b class="caret"></b></a>
 					<ul class="dropdown-menu">
+						<li><a href="?do=Translation">{{lang_translations}}</a></li>
 						<li class="dropdown-header">{{lang_language}}</li>
 						{{#langs}}
 						<li><a href="?lang={{cc}}&amp;url={{url}}"><img src="lang/{{cc}}/flag.png" alt="{{name}}"> {{name}}</a></li>
