--- a/templates/serversetup/ipxe.html
+++ b/templates/serversetup/ipxe.html
@@ -29,7 +29,7 @@
 			<div class="form-group">
 				<strong>{{lang_masterPassword}}</strong>
 				<div class="form-narrow">
-					<input type="text" class="form-control" name="masterpassword" value="{{masterpassword}}">
+					<input type="text" class="form-control" name="masterpassword" value="{{masterpasswordclear}}">
 				</div>
 				<i>{{lang_masterPasswordHelp}}</i>
 			</div>
