--- a/templates/baseconfig/_page.html
+++ b/templates/baseconfig/_page.html
@@ -15,7 +15,7 @@
 						{{{item}}}
 					</div>
 					<div class="col-md-2">
-						<a class="btn btn-default" data-toggle="modal" data-target="#help-{{setting}}">{{lang_help}}</a>
+						<a class="btn btn-default" data-toggle="modal" data-target="#help-{{setting}}"><span class="glyphicon glyphicon-question-sign"></span></a>
 					</div>
 				</div>
 			</div>
