Add option to hide or show password fields

--- a/templates/webinterface/https.html
+++ b/templates/webinterface/https.html
@@ -1,7 +1,6 @@
-<h1>{{lang_httpsSettings}}</h1>
-
-<form action="?do=Https" method="post">
+<form action="?do=WebInterface" method="post">
 	<input type="hidden" name="token" value="{{token}}">
+	<input type="hidden" name="action" value="https">
 	<div class="panel panel-default">
 		<div class="panel-heading">{{lang_httpsSettings}}</div>
 		<div class="panel-body">
