Store processed and unprocessed values of settings; add option to download minilinux components that seem up to date; add setting to show/hide password fields

--- a/templates/main-menu.html
+++ b/templates/main-menu.html
@@ -24,7 +24,7 @@
 						<li><a href="?do=ServerSetup">{{lang_configurationBasic}}</a></li>
 						<li><a href="?do=InternetAccess">{{lang_internetAccess}}</a></li>
 						<li><a href="?do=VmStore">{{lang_vmLocation}}</a></li>
-						<li><a href="?do=Https">{{lang_webInterface}}</a></li>
+						<li><a href="?do=WebInterface">{{lang_webInterface}}</a></li>
 						<li><a href="?do=Backup">{{lang_backup}}</a></li>
 					</ul>
 				</li>
