--- a/templates/sysconfig/ad-finish.html
+++ b/templates/sysconfig/ad-finish.html
@@ -7,7 +7,7 @@
 </div>
 <br>
 <div id="back" class="pull-left" style="display:none">
-	<a href="?do=SysConfig&amp;action=addmodule&amp;step=AdModule_Start" class="btn btn-primary">{{lang_restartWizard}}</a>
+	<a href="?do=SysConfig&amp;action=addmodule&amp;step=AdAuth_Start" class="btn btn-primary">{{lang_restartWizard}}</a>
 </div>
 <div id="finish" class="pull-right" style="display:none">
 	<a href="?do=SysConfig" class="btn btn-primary">{{lang_to}} {{lang_systemConfiguration}}</a>
