--- a/templates/sysconfig/start.html
+++ b/templates/sysconfig/start.html
@@ -3,7 +3,7 @@
 {{#modules}}
 <div class="panel panel-default">
 	<div class="panel-heading">
-		{{title}} <a href="?do=SysConfig&amp;action=addmodule&amp;step={{startClass}}" class="pull-right btn btn-primary btn-xs"><span class="glyphicon glyphicon-plus"></span> {{lang_add}}</a>
+		{{title}} <a href="?do=SysConfig&amp;action=addmodule&amp;step={{wizardClass}}" class="pull-right btn btn-primary btn-xs"><span class="glyphicon glyphicon-plus"></span> {{lang_add}}</a>
 	</div>
 	<div class="panel-body">
 		{{description}}
