config module structure completed. Many other fixes. Hidden pw field support.

--- a/templates/internetaccess/_page.html
+++ b/templates/internetaccess/_page.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="input-group">
 				<span class="input-group-addon slx-ga">{{lang_proxyPassword}}</span>
-				<input name="PROXY_PASSWORD" value="{{PROXY_PASSWORD}}" type="text" class="form-control">
+				<input name="PROXY_PASSWORD" value="{{PROXY_PASSWORD}}" type="{{password_type}}" class="form-control">
 			</div>
 			<button class="btn btn-primary" type="submit">{{lang_save}}</button>
 		</div>
