--- a/templates/page-vmstore.html
+++ b/templates/page-vmstore.html
@@ -42,7 +42,7 @@
 						<span class="input-group-addon">
 							{{lang_password}}
 						</span>
-						<input type="text" class="form-control" name="cifspasswd" value="{{cifspasswd}}" placeholder="{{lang_password}}">
+						<input type="{{password_type}}" class="form-control" name="cifspasswd" value="{{cifspasswd}}" placeholder="{{lang_password}}">
 					</div>
 					<br>
 					<label for="cifsuserro">{{lang_readOnly}}</label>
@@ -54,7 +54,7 @@
 						<span class="input-group-addon">
 							{{lang_password}}
 						</span>
-						<input type="text" class="form-control" name="cifspasswdro" value="{{cifspasswdro}}" placeholder="{{lang_password}}">
+						<input type="{{password_type}}" class="form-control" name="cifspasswdro" value="{{cifspasswdro}}" placeholder="{{lang_password}}">
 					</div>
 				</div>
 			</div>
