--- a/templates/sysconfig/ad-finish.html
+++ b/templates/sysconfig/ad-finish.html
@@ -24,4 +24,6 @@ function ldapCb(task)
 		$('#back').attr('style', '');
 	}
 }
+if ('{{tm-config}}' == '')
+	$('#finish').attr('style', '');
 </script>
