Fix jumping from creating a new configuration to creating a new module

--- a/templates/sysconfig/cfg-start.html
+++ b/templates/sysconfig/cfg-start.html
@@ -27,7 +27,7 @@
 				</div>
 			{{/modules}}
 			{{^modules}}
-			<a class="btn btn-primary btn-xs" href="?do=SysConfig&amp;action=addmodule&amp;step={{startClass}}">{{lang_new}}..</a>
+			<a class="btn btn-primary btn-xs" href="?do=SysConfig&amp;action=addmodule&amp;step={{wizardClass}}">{{lang_new}}..</a>
 			{{/modules}}
 			</div>
 		</div>
