--- a/templates/sysconfig/branding-start.html
+++ b/templates/sysconfig/branding-start.html
@@ -3,6 +3,7 @@
 </p>
 <form role="form" enctype="multipart/form-data" method="post" action="?do=SysConfig&amp;action=addmodule&amp;step={{step}}">
 	<input type="hidden" name="token" value="{{token}}">
+	<input type="hidden" name="edit" value="{{edit}}">
 	<div class="form-group">
 		<label for="input-url">{{lang_urlLoad}}</label>
 		<input class="form-control" type="text" name="url" id="input-url">
