--- a/templates/sysconfig/cfg-start.html
+++ b/templates/sysconfig/cfg-start.html
@@ -27,7 +27,7 @@
 				</div>
 			{{/modules}}
 			{{^modules}}
-			<a class="btn btn-primary btn-xs" href="?do=SysConfig&amp;action=addmodule&amp;step={{wizardClass}}">{{lang_new}}..</a>
+			<div class="alert alert-info">{{lang_noModuleOfType}}</div>
 			{{/modules}}
 			</div>
 		</div>
